kubernetes/deploy-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pvc-deploy
  name: pvc-deploy
  namespace: pvc-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pvc-deploy
  template:
    metadata:
      labels:
        app: pvc-deploy
    spec:
      containers:
      - image: busybox
        name: busybox
        volumeMounts:
        - name: data-from-pvc
          mountPath: /tmp
      volumes:
        - name: data-from-pvc
          persistentVolumeReclaim:
            claimName: my-pvc
