kubernetes/secrets-ex.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-secrets
spec:
  containers:
  - name: mycontainer
    image: nginx
